# spmc

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  main.cpp  pyproject.toml  spmc.hpp  statistic.hpp
benchmarks/: main.cpp
build-prof/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake  perf.data  perf20.data
examples/: advanced_example.py  cpp_producer_test.py  profile_example.py  python_example.py  throughput_test.py
msgbus/: __init__.py  market_data.hpp  market_data_hub.hpp  python_bindings.cpp  spmc.hpp  statistic.hpp
src/: main.cpp  spmc.hpp  statistic.hpp
